[tool.poetry]
name = "ufy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
DiscordUtils = "^1.2.4"
flask = "^1.1.2"
youtube_dl = "^2020.11.26"
PyNaCl = "^1.4.0"
Cogs = "^0.4.4"
pyfiglet = "^0.8.post1"
replit = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
